--- a/index.html
+++ b/index.html
@@ -10,5 +10,60 @@
 </head>
 
 <body>
-    CONTENT
+    <header>
+        <div class="logo">logo</div>
+        <nav>
+            <a href="">pagrindinis</a>
+            <a href="">galerija</a>
+            <a href="">kainos</a>
+        </nav>
+    </header>
+    <section class="hero">
+        <h1>headline</h1>
+        <p>Lörem ipsum areligt täliga olig. Beparad muligt nylogi, i far. Skräpbot semigt, diatrenade diränar</p>
+        <a href="#">el. parduotuvė</a>
+        <a href="#">pateikti individualų užsakymą</a>
+    </section>
+    <section class="kvrm">
+        <h2></h2>
+        <div>
+            <img src="./assets/Section-kvmr-Rectangle1.png" alt="jeans img 1">
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen.</p>
+        </div>
+        <div>
+            <img src="./assets/Section-kvmr-Rectangle2.png" alt="jeans img 2">
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen.</p>
+        </div>
+        <div>
+            <img src="./assets/Section-kvmr-Rectangle3.png" alt="jeans img 3">
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen.</p>
+        </div>
+    </section>
+    <section class="duk">
+        <h2></h2>
+        <div>
+            <h3>Lörem ipsum dagen säplalingar.?</h3>
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
+            <div><a href=""></a><a href=""></a></div>
+        </div>
+        <div>
+            <h3>Lörem ipsum dagen säplalingar.?</h3>
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
+            <div><a href=""></a><a href=""></a></div>
+        </div>
+        <div>
+            <h3>Lörem ipsum dagen säplalingar.?</h3>
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
+            <div><a href=""></a><a href=""></a></div>
+        </div>
+        <div>
+            <h3>Lörem ipsum dagen säplalingar.?</h3>
+            <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
+        </div>
+        <div>
+            <a href="">klauskite gyvai</a>
+            <a href="">susisiekite</a>
+        </div>
+        <hr>
+    </section>
 </body>
