--- a/index.html
+++ b/index.html
@@ -66,4 +66,20 @@
         </div>
         <hr>
     </section>
+    <section class="newsletter">
+        <h2>naujienlaiškis</h2>
+        <p>Lörem ipsum tangar hexangen. Du kan vara drabbad.</p>
+        <form action="">
+            <input type="email">
+            <submit></submit>
+        </form>
+    </section>
+    <footer>
+        <h2>kontaktai</h2>
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>Copyright &copy; 2022. All rights reserved.</div>
+    </footer>
 </body>
