--- a/index.html
+++ b/index.html
@@ -9,77 +9,79 @@
     <link rel="stylesheet" href="./CSS/global.css">
 </head>
 
-<body>
-    <header>
-        <div class="logo">logo</div>
-        <nav>
+<body class="container">
+    <header class="row">
+        <div class="logo col-6">logo</div>
+        <nav class="col-6">
             <a href="">pagrindinis</a>
             <a href="">galerija</a>
             <a href="">kainos</a>
         </nav>
     </header>
-    <section class="hero">
-        <h1>headline</h1>
-        <p>Lörem ipsum areligt täliga olig. Beparad muligt nylogi, i far. Skräpbot semigt, diatrenade diränar</p>
-        <a href="#">el. parduotuvė</a>
-        <a href="#">pateikti individualų užsakymą</a>
+    <section class="hero row visible-flex">
+        <h1 class="col-12 heading">headline</h1>
+        <p class="col-12">Lörem ipsum areligt täliga olig. Beparad muligt nylogi, i far.<br>Skräpbot semigt, diatrenade diränar</p>
+        <nav class="visible-flex">
+            <a href="#">El. Parduotuvė</a>
+            <a style="background-color:#fff; color:black" href="#">Pateikti individualų užsakymą</a>
+        </nav>
     </section>
-    <section class="kvrm">
-        <h2></h2>
-        <div>
+    <section class="kvrm row">
+        <h2 class="col-12">Kodėl verta mus rinktis?</h2>
+        <div class="col-12 col-xl-4">
             <img src="./assets/Section-kvmr-Rectangle1.png" alt="jeans img 1">
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen.</p>
         </div>
-        <div>
+        <div class="col-12 col-xl-4">
             <img src="./assets/Section-kvmr-Rectangle2.png" alt="jeans img 2">
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen.</p>
         </div>
-        <div>
+        <div class="col-12 col-xl-4">
             <img src="./assets/Section-kvmr-Rectangle3.png" alt="jeans img 3">
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen.</p>
         </div>
     </section>
-    <section class="duk">
-        <h2></h2>
-        <div>
+    <section class="duk row">
+        <h2 class="col-12">d.u.k.</h2>
+        <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
             <div><a href=""></a><a href=""></a></div>
         </div>
-        <div>
+        <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
             <div><a href=""></a><a href=""></a></div>
         </div>
-        <div>
+        <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
             <div><a href=""></a><a href=""></a></div>
         </div>
-        <div>
+        <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
         </div>
-        <div>
+        <div class="col-12">
             <a href="">klauskite gyvai</a>
             <a href="">susisiekite</a>
         </div>
         <hr>
     </section>
-    <section class="newsletter">
-        <h2>naujienlaiškis</h2>
-        <p>Lörem ipsum tangar hexangen. Du kan vara drabbad.</p>
-        <form action="">
+    <section class="newsletter row">
+        <h2 class="col-12">naujienlaiškis</h2>
+        <p class="col-12">Lörem ipsum tangar hexangen. Du kan vara drabbad.</p>
+        <form class="col-12" action="">
             <input type="email">
             <submit></submit>
         </form>
     </section>
-    <footer>
-        <h2>kontaktai</h2>
-        <div>
-            <div></div>
-            <div></div>
+    <footer class="row">
+        <h2 class="col-12">kontaktai</h2>
+        <div class="col-12 contacts">
+            <div>Mus rasite:<br>Saulėtekio al. 17, Vilnius</div>
+            <div>Darbo laikas:<br>I-V 11:00 - 17:00</div>
         </div>
-        <div>Copyright &copy; 2022. All rights reserved.</div>
+        <div class="col-12">Copyright &copy; 2022. All rights reserved.</div>
     </footer>
 </body>
