--- a/index.html
+++ b/index.html
@@ -46,17 +46,14 @@
         <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
-            <div><a href=""></a><a href=""></a></div>
         </div>
         <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
-            <div><a href=""></a><a href=""></a></div>
         </div>
         <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
             <p>Lörem ipsum dagen säplalingar. Lalig trefevis otengen. Prepengen peprepör för prekihet och</p>
-            <div><a href=""></a><a href=""></a></div>
         </div>
         <div class="col-12 col-xl-6">
             <h3>Lörem ipsum dagen säplalingar.?</h3>
@@ -66,14 +63,14 @@
             <a href="">klauskite gyvai</a>
             <a href="">susisiekite</a>
         </div>
-        <hr>
     </section>
+    <hr>
     <section class="newsletter row">
         <h2 class="col-12">naujienlaiškis</h2>
         <p class="col-12">Lörem ipsum tangar hexangen. Du kan vara drabbad.</p>
-        <form class="col-12" action="">
-            <input type="email">
-            <submit></submit>
+        <form class="col-12">
+            <input type="email" placeholder="El. Paštas">
+            <input style="background-color:black; color:#fff;" type="submit" value="Prenumeruoti">
         </form>
     </section>
     <footer class="row">
